[package]
name = "a3f_sentinel"
version = "0.1.0"
authors = ["ScottyThePilot <scotty.codes@gmail.com>"]
edition = "2018"

[dependencies]
async-std = { version = "^1.9", features = ["unstable"] }
ron = "^0.6.4"
serenity = "^0.10.2"
serde = { version = "^1.0", features = ["derive"] }
tokio = { version = "^1.2", features = ["full"] }
