[package]
name = "a3f_sentinel"
version = "0.3.0"
authors = ["ScottyThePilot <scotty.codes@gmail.com>"]
edition = "2018"

[dependencies]
serenity = "^0.10.2"
serde = { version = "^1.0", features = ["derive"] }
singlefile = { git = "https://github.com/ScottyThePilot/singlefile", features = ["format-json"] }
tokio = { version = "^1.2", features = ["full"] }
util_macros = { git = "https://github.com/ScottyThePilot/util_macros" }
